syntax = "proto3";

package service1;
option go_package = "audio-texttranscript/proto/service1";

// Service1 forwards audio to Service2.
service AudioProcessingService {
  rpc ProcessAudio(stream AudioChunk) returns (stream Transcription);
}

message AudioChunk {
  bytes data = 1;
  string session_id = 2;
}

message Transcription {
  string text = 1;
  string session_id = 2;
}
